load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "bugs_central_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//bugs-central/go/bugs-central:bugs-central",
                "0755",
            ],
        ],
        "/usr/local/share/bugs-central/dist": [
            [
                "//bugs-central/images:favicon.ico",
                "0644",
            ],
        ] + [
            [
                "//bugs-central/pages:production/index.%s" % ext,
                "0644",
            ]
            for ext in [
                "css",
                "html",
                "js",
            ]
        ],
    },
    repository = "skia-public/bugs-central",
    run_commands_root = [
        "apk update",
        # Install packages useful for debugging on the pod.
        "apk add --no-cache bash procps",
    ],
)
