load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "cabeserver",
    dirs = {
        "/usr/local/bin/cabeserver": [
            [
                "//cabe/go/cmd/cabeserver:cabeserver",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/cabeserver/cabeserver",
    repository = "skia-public/cabeserver",
)
