load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "cd_container",
    base_image = "@cd-base",
    default_user = "root",
    dirs = {
        "/usr/local/bin": [
            [
                "//cd/go/build-images:build-images",
                "0755",
            ],
            [
                "//cd/cmd/stagemanager:stagemanager",
                "0755",
            ],
        ],
        "/cipd": [
            [
                "@bazelisk//file",
                "0755",
            ],
        ],
    },
    empty_dirs = {"/cipd": "0777"},
    repository = "skia-public/cd",
)
