load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "cherrypick_watcher_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//cherrypick-watcher/go/cherrypick-watcher:cherrypick-watcher",
                "0755",
            ],
        ],
    },
    repository = "skia-public/cherrypick-watcher",
    run_commands_root = [
        "apk update",
        # Install packages useful for debugging on the pod.
        "apk add --no-cache bash procps",
    ],
)
