load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "cherrypick_watcher_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//cherrypick-watcher/go/cherrypick-watcher:cherrypick-watcher",
                "0755",
            ],
        ],
    },
    repository = "skia-public/cherrypick-watcher",
)
