load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "codereview_watcher_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//codereview-watcher/go/codereview-watcher:codereview-watcher",
                "0755",
            ],
        ],
    },
    repository = "skia-public/codereview-watcher",
)
