load("//bazel:skia_app_container.bzl", "skia_app_container")
load("//codesize/pages:all_pages.bzl", "ALL_PAGES")

skia_app_container(
    name = "codesizeserver",
    dirs = {
        "/usr/local/bin/codesizeserver": [
            [
                "//codesize/go/codesizeserver:codesizeserver",
                "0755",
            ],
        ],
        "/usr/local/share/codesizeserver/dist": [
            [
                "//codesize/pages:production/%s.%s" % (page, ext),
                "0644",
            ]
            for page in ALL_PAGES
            for ext in [
                "html",
                "js",
                "css",
            ]
        ],
    },
    entrypoint = "/usr/local/bin/codesizeserver/codesizeserver",
    repository = "skia-public/codesizeserver",
)
