load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "cq_watcher_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//cq_watcher/go/cq_watcher:cq_watcher",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/cq_watcher",
    repository = "skia-public/cq_watcher",
)
