load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "datahopper_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//datahopper/go/datahopper:datahopper",
                "0755",
            ],
        ],
    },
    repository = "skia-public/datahopper",
)
