load("//bazel:skia_app_container.bzl", "skia_app_container")

# Define a Docker container for the debugger which contains all but the
# Skia components. These (CanvasKit) will be added in a later step.
skia_app_container(
    name = "debugger_container-base",
    base_image = "@base-cipd",
    dirs = {
        "/usr/local/bin": [
            [
                "//debugger-app/go/debugger-app:debugger-app",
                "0755",
            ],
        ],
        "/usr/local/share/debugger-app/": [
            [
                "//debugger-app/pages:production/main.html",
                "0644",
            ],
            [
                "//debugger-app/pages:production/main.js",
                "0644",
            ],
            [
                "//debugger-app/pages:production/main.css",
                "0644",
            ],
            [
                "//debugger-app/pages:production/versions.html",
                "0644",
            ],
            [
                "//debugger-app/pages:production/versions.js",
                "0644",
            ],
            [
                "//debugger-app/pages:production/versions.css",
                "0644",
            ],
            [
                "//debugger-app/static:images",
                "0644",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/debugger-app",
    repository = "skia-public/debugger-app-base",
)
