load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "docker_pushes_watcher_container",
    base_image = "@base-cipd//image",
    dirs = {
        "/usr/local/bin": [
            [
                "//docker_pushes_watcher/go/docker_pushes_watcher:docker_pushes_watcher",
                "0755",
            ],
            [
                "//kube/go/pushk:pushk",
                "0755",
            ],
        ],
        "/etc/docker_pushes_watcher/": [
            [
                "//kube/clusters:config.json",
                "0644",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/docker_pushes_watcher",
    repository = "skia-public/docker_pushes_watcher",
    run_commands_root = [
        # Install kubectl.
        "apt-get update",
        "apt-get upgrade -y",
        "apt-get install -y curl bash software-properties-common gnupg2",
        "curl https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl",
        "chmod +x /usr/local/bin/kubectl",

        # Install docker.
        "curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -",
        "add-apt-repository 'deb [arch=amd64] https://download.docker.com/linux/debian buster stable'",
        "apt-get update",
        "apt-get install -y docker-ce docker-ce-cli",
    ],
)
