load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "docsyserver_container",
    base_image = "@docsyserver-base//image",
    dirs = {
        "/usr/local/bin": [
            [
                "//docsyserver/go/docsyserver:docsyserver",
                "0755",
            ],
        ],
        "/": [
            [
                "//docsyserver/images:serve.sh",
                "0755",
            ],
            [
                "//docsyserver/images:build.sh",
                "0755",
            ],
        ],
        "/home/skia/docsy/layouts/partials": [
            [
                "//docsyserver/images:head.html",
                "0644",
            ],
            [
                "//docsyserver/images:page-meta-lastmod.html",
                "0644",
            ],
        ],
        "/home/skia/docsy/layouts/partials/hooks": [
            [
                "//docsyserver/images:head-end.html",
                "0644",
            ],
        ],
        "/home/skia/docsy/static/favicons": [
            [
                "//docsyserver/images:favicon.ico",
                "0644",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/docsyserver",
    env = {
        "PATH": "$$PATH:/home/skia/node-v14.16.0-linux-x64/bin",
    },
    repository = "skia-public/docsyserver",
)
