load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "docsyserver_container",
    base_image = "//kube/base-cipd:base-cipd",
    dirs = {
        "/usr/local/bin": [
            [
                "//docsyserver/go/docsyserver:docsyserver",
                "0755",
            ],
        ],
        "/": [
            [
                "//docsyserver/images:serve.sh",
                "0755",
            ],
            [
                "//docsyserver/images:build.sh",
                "0755",
            ],
        ],
        "/home/skia/docsy/layouts/partials": [
            [
                "//docsyserver/images:head.html",
                "0644",
            ],
            [
                "//docsyserver/images:page-meta-lastmod.html",
                "0644",
            ],
        ],
        "/home/skia/docsy/layouts/partials/hooks": [
            [
                "//docsyserver/images:head-end.html",
                "0644",
            ],
        ],
        "/home/skia/docsy/static/favicons": [
            [
                "//docsyserver/images:favicon.ico",
                "0644",
            ],
        ],
        "/home/skia/go/bin": [
            [
                "@hugo//:file",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/docsyserver",
    env = {
        "PATH": "/go/bin:/home/skia/go/bin:$PATH:/home/skia/docsy/node/bin:/home/skia/docsy/node_modules/.bin",
    },
    extra_tars = [
        "@docsyserver-apt-install//:flat",
        "//bazel/go:go_toolchain_tar",
        "@docsy//:docsy.tar",
    ],
    owners = {
        "/home/skia": "2000.2000",
    },
    repository = "skia-public/docsyserver",
)
