load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "datastore_backup_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//ds/go/datastore-backup-k:datastore-backup-k",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/datastore-backup-k",
    repository = "skia-public/datastore-backup-k",
)
