load("//bazel:skia_app_container.bzl", "skia_app_container")

exports_files([
    "fiddler_restart.sh",
])

skia_app_container(
    name = "fiddle_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//fiddlek/go/fiddle:fiddle",
                "0755",
            ],
        ],
        "/etc/fiddle/source": [
            [
                "//fiddlek/source:%s" % img,
                "0755",
            ]
            for img in [
                "1.png",
                "2.png",
                "3.png",
                "4.png",
                "5.png",
                "6.png",
            ]
        ],
        "/usr/local/share/fiddle/dist": [
            [
                "//fiddlek/pages:production/%s.%s" % (page, ext),
                "0644",
            ]
            for page in [
                "embed",
                "named",
                "newindex",
            ]
            for ext in [
                "css",
                "html",
                "js",
            ]
        ],
    },
    entrypoint = "/usr/local/bin/fiddle",
    repository = "skia-public/fiddle",
)

skia_app_container(
    name = "fiddler_container-base",
    base_image = "@fiddler-build-skia",
    dirs = {
        "/usr/local/bin": [
            [
                "//fiddlek/go/fiddler:fiddler",
                "0755",
            ],
            [
                "//fiddlek:fiddler_restart.sh",
                "0755",
            ],
        ],
        # Note source is fiddle, not fiddler, to agree with the fiddle image.
        "/etc/fiddle/source": [
            [
                "//fiddlek/source:%s" % img,
                "0644",
            ]
            for img in [
                "1.png",
                "2.png",
                "3.png",
                "4.png",
                "5.png",
                "6.png",
            ]
        ],
    },
    entrypoint = "/usr/local/bin/fiddler",
    repository = "skia-public/fiddler-base",
)
